@startuml

title __CUSTOMCOMPONENTS's Class Diagram__\n


    namespace elron.foundationWizzard.com {
      namespace ui {
        namespace customcomponents {
          class helron.foundationWizzard.com.ui.customcomponents.JTextFieldLink {
              + JTextFieldLink()
          }
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        namespace customcomponents {
          class helron.foundationWizzard.com.ui.customcomponents.ListenedJCheckBox {
              - label : String
              + ListenedJCheckBox()
              + focusGained()
              + focusLost()
          }
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        namespace customcomponents {
          class helron.foundationWizzard.com.ui.customcomponents.ListenedJComboBox {
              + ListenedJComboBox()
              + focusGained()
              + focusLost()
          }
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        namespace customcomponents {
          class helron.foundationWizzard.com.ui.customcomponents.ListenedJList {
              - dataList : DefaultListModel<String>
              + ListenedJList()
          }
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        namespace customcomponents {
          class helron.foundationWizzard.com.ui.customcomponents.ListenedJSpinner {
              + ListenedJSpinner()
              + stateChanged()
          }
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        namespace customcomponents {
          class helron.foundationWizzard.com.ui.customcomponents.ListenedTextField {
              - label : String
              + ListenedTextField()
              + focusGained()
              + focusLost()
          }
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        namespace customcomponents {
          class helron.foundationWizzard.com.ui.customcomponents.PlusButton {
              ~ dataList : DefaultListModel<String>
              - dataStructureID : String
              + PlusButton()
              + PlusButton()
              + PlusButton()
              + getDataList()
              + getRequestedFormType()
              + getStructureIdRequest()
          }
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        namespace customcomponents {
          class helron.foundationWizzard.com.ui.customcomponents.ValidateButton {
              + ValidateButton()
          }
        }
      }
    }

  


    namespace elron.foundationWizzard.com {
      namespace ui {
        namespace customcomponents {
          class helron.foundationWizzard.com.ui.customcomponents.mySplitpanel {
              - containedPanels : List<JPanel>
              {static} + main()
              {static} - addColumnContent()
              {static} - addList()
              {static} - addPlusButton()
              {static} - addindexList()
          }
        }
      }
    }

  

  helron.foundationWizzard.com.ui.customcomponents.JTextFieldLink -up-|> javax.swing.JTextField
  helron.foundationWizzard.com.ui.customcomponents.ListenedJCheckBox .up.|> java.awt.event.FocusListener
  helron.foundationWizzard.com.ui.customcomponents.ListenedJCheckBox -up-|> javax.swing.JCheckBox
  helron.foundationWizzard.com.ui.customcomponents.ListenedJCheckBox o-- helron.foundationWizzard.com.ui.Form : activeForm
  helron.foundationWizzard.com.ui.customcomponents.ListenedJComboBox .up.|> java.awt.event.FocusListener
  helron.foundationWizzard.com.ui.customcomponents.ListenedJComboBox -up-|> javax.swing.JComboBox
  helron.foundationWizzard.com.ui.customcomponents.ListenedJList -up-|> javax.swing.JList
  helron.foundationWizzard.com.ui.customcomponents.ListenedJSpinner .up.|> javax.swing.event.ChangeListener
  helron.foundationWizzard.com.ui.customcomponents.ListenedJSpinner -up-|> javax.swing.JSpinner
  helron.foundationWizzard.com.ui.customcomponents.ListenedJSpinner o-- helron.foundationWizzard.com.ui.Form : activeForm
  helron.foundationWizzard.com.ui.customcomponents.ListenedTextField .up.|> java.awt.event.FocusListener
  helron.foundationWizzard.com.ui.customcomponents.ListenedTextField -up-|> javax.swing.JTextField
  helron.foundationWizzard.com.ui.customcomponents.PlusButton -up-|> javax.swing.JButton
  helron.foundationWizzard.com.ui.customcomponents.PlusButton o-- helron.foundationWizzard.com.datagenerator.ParamType : requestedFormType
  helron.foundationWizzard.com.ui.customcomponents.ValidateButton -up-|> javax.swing.JButton
  helron.foundationWizzard.com.ui.customcomponents.mySplitpanel -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
